Parser/Cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class_decl
    3           | class_list class_decl

    4 class_decl: CLASS TYPEID var_formals superclass '{' feature_list '}'

    5 superclass: %empty
    6           | EXTENDS TYPEID actuals
    7           | EXTENDS NATIVE

    8 feature_list: %empty
    9             | feature_list feature
   10             | feature_list '{' block '}' ';'

   11 feature: opt_override DEF OBJECTID formals ':' TYPEID '=' expr ';'
   12        | opt_override DEF OBJECTID formals ':' TYPEID '=' NATIVE ';'
   13        | VAR OBJECTID ':' TYPEID '=' expr ';'
   14        | VAR OBJECTID '=' NATIVE ';'

   15 var_formals: '(' ')'
   16            | '(' var_formals_one_or_more ')'

   17 var_formals_one_or_more: var_formal
   18                        | var_formals_one_or_more ',' var_formal

   19 var_formal: VAR OBJECTID ':' TYPEID

   20 formals: '(' ')'
   21        | '(' formals_one_or_more ')'

   22 formals_one_or_more: formal
   23                    | formals_one_or_more ',' formal

   24 formal: OBJECTID ':' TYPEID

   25 expr: OBJECTID '=' expr
   26     | SUPER '.' OBJECTID actuals
   27     | expr '.' OBJECTID actuals
   28     | IF '(' expr ')' expr ELSE expr
   29     | WHILE '(' expr ')' expr
   30     | '{' block '}'
   31     | expr MATCH '{' simple_cases '}'
   32     | NEW TYPEID actuals
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | '-' expr
   38     | expr '<' expr
   39     | expr EQEQ expr
   40     | expr LE expr
   41     | '!' expr
   42     | '(' expr ')'
   43     | '(' ')'
   44     | NULL
   45     | INT_LIT
   46     | STR_LIT
   47     | BOOL_LIT
   48     | THIS
   49     | OBJECTID
   50     | OBJECTID actuals

   51 block: %empty
   52      | stmt_list

   53 actuals: '(' ')'
   54        | '(' expr_list ')'

   55 expr_list: expr
   56          | expr_list ',' expr

   57 stmt_list: expr
   58          | expr ';' stmt_list
   59          | VAR OBJECTID ':' TYPEID '=' expr ';' stmt_list

   60 simple_cases: simple_case
   61             | simple_cases simple_case

   62 simple_case: CASE OBJECTID ':' TYPEID ARROW block
   63            | CASE NULL ARROW block

   64 opt_override: OVERRIDE
   65             | %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 41
    '(' (40) 15 16 20 21 28 29 42 43 53 54
    ')' (41) 15 16 20 21 28 29 42 43 53 54
    '*' (42) 35
    '+' (43) 33
    ',' (44) 18 23 56
    '-' (45) 34 37
    '.' (46) 26 27
    '/' (47) 36
    ':' (58) 11 12 13 19 24 59 62
    ';' (59) 10 11 12 13 14 58 59
    '<' (60) 38
    '=' (61) 11 12 13 14 25 59
    '{' (123) 4 10 30 31
    '}' (125) 4 10 30 31
    error (256)
    CASE (258) 62 63
    CLASS (259) 4
    DEF (260) 11 12
    ELSE (261) 28
    EXTENDS (262) 6 7
    IF (263) 28
    MATCH (264) 31
    NATIVE (265) 7 12 14
    NEW (266) 32
    NULL (267) 44 63
    OVERRIDE (268) 64
    SUPER (269) 26
    THIS (270) 48
    VAR (271) 13 14 19 59
    WHILE (272) 29
    STR_LIT <Symbol> (273) 46
    INT_LIT <Symbol> (274) 45
    BOOL_LIT <Boolean> (275) 47
    TYPEID <Symbol> (276) 4 6 11 12 13 19 24 32 59 62
    OBJECTID <Symbol> (277) 11 12 13 14 19 24 25 26 27 49 50 59 62
    EQEQ (278) 39
    LE (279) 40
    ARROW (280) 62 63
    ERROR <String> (281)
    UNARY (282)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program (44)
        on left: 1
        on right: 0
    class_list <Classes> (45)
        on left: 2 3
        on right: 1 3
    class_decl <Class> (46)
        on left: 4
        on right: 2 3
    superclass <Symbol> (47)
        on left: 5 6 7
        on right: 4
    feature_list <Features> (48)
        on left: 8 9 10
        on right: 4 9 10
    feature <Feature> (49)
        on left: 11 12 13 14
        on right: 9
    var_formals <Formals> (50)
        on left: 15 16
        on right: 4
    var_formals_one_or_more <Formals> (51)
        on left: 17 18
        on right: 16 18
    var_formal <Formal> (52)
        on left: 19
        on right: 17 18
    formals <Formals> (53)
        on left: 20 21
        on right: 11 12
    formals_one_or_more <Formals> (54)
        on left: 22 23
        on right: 21 23
    formal <Formal> (55)
        on left: 24
        on right: 22 23
    expr <Expression> (56)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 11 13 25 27 28 29 31 33 34 35 36 37 38 39 40 41 42 55 56 57 58 59
    block <Expression> (57)
        on left: 51 52
        on right: 10 30 62 63
    actuals <Expressions> (58)
        on left: 53 54
        on right: 6 26 27 32 50
    expr_list <Expressions> (59)
        on left: 55 56
        on right: 54 56
    stmt_list <Expressions> (60)
        on left: 57 58 59
        on right: 52 58 59
    simple_cases <Cases> (61)
        on left: 60 61
        on right: 31 61
    simple_case <Case> (62)
        on left: 62 63
        on right: 60 61
    opt_override <Boolean> (63)
        on left: 64 65
        on right: 11 12


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class_decl  go to state 4


State 1

    4 class_decl: CLASS . TYPEID var_formals superclass '{' feature_list '}'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class_decl

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class_decl  go to state 7


State 4

    2 class_list: class_decl .

    $default  reduce using rule 2 (class_list)


State 5

    4 class_decl: CLASS TYPEID . var_formals superclass '{' feature_list '}'

    '('  shift, and go to state 8

    var_formals  go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class_decl .

    $default  reduce using rule 3 (class_list)


State 8

   15 var_formals: '(' . ')'
   16            | '(' . var_formals_one_or_more ')'

    VAR  shift, and go to state 10
    ')'  shift, and go to state 11

    var_formals_one_or_more  go to state 12
    var_formal               go to state 13


State 9

    4 class_decl: CLASS TYPEID var_formals . superclass '{' feature_list '}'

    EXTENDS  shift, and go to state 14

    $default  reduce using rule 5 (superclass)

    superclass  go to state 15


State 10

   19 var_formal: VAR . OBJECTID ':' TYPEID

    OBJECTID  shift, and go to state 16


State 11

   15 var_formals: '(' ')' .

    $default  reduce using rule 15 (var_formals)


State 12

   16 var_formals: '(' var_formals_one_or_more . ')'
   18 var_formals_one_or_more: var_formals_one_or_more . ',' var_formal

    ')'  shift, and go to state 17
    ','  shift, and go to state 18


State 13

   17 var_formals_one_or_more: var_formal .

    $default  reduce using rule 17 (var_formals_one_or_more)


State 14

    6 superclass: EXTENDS . TYPEID actuals
    7           | EXTENDS . NATIVE

    NATIVE  shift, and go to state 19
    TYPEID  shift, and go to state 20


State 15

    4 class_decl: CLASS TYPEID var_formals superclass . '{' feature_list '}'

    '{'  shift, and go to state 21


State 16

   19 var_formal: VAR OBJECTID . ':' TYPEID

    ':'  shift, and go to state 22


State 17

   16 var_formals: '(' var_formals_one_or_more ')' .

    $default  reduce using rule 16 (var_formals)


State 18

   18 var_formals_one_or_more: var_formals_one_or_more ',' . var_formal

    VAR  shift, and go to state 10

    var_formal  go to state 23


State 19

    7 superclass: EXTENDS NATIVE .

    $default  reduce using rule 7 (superclass)


State 20

    6 superclass: EXTENDS TYPEID . actuals

    '('  shift, and go to state 24

    actuals  go to state 25


State 21

    4 class_decl: CLASS TYPEID var_formals superclass '{' . feature_list '}'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 26


State 22

   19 var_formal: VAR OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 27


State 23

   18 var_formals_one_or_more: var_formals_one_or_more ',' var_formal .

    $default  reduce using rule 18 (var_formals_one_or_more)


State 24

   53 actuals: '(' . ')'
   54        | '(' . expr_list ')'

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    ')'       shift, and go to state 41
    '!'       shift, and go to state 42

    expr       go to state 43
    expr_list  go to state 44


State 25

    6 superclass: EXTENDS TYPEID actuals .

    $default  reduce using rule 6 (superclass)


State 26

    4 class_decl: CLASS TYPEID var_formals superclass '{' feature_list . '}'
    9 feature_list: feature_list . feature
   10             | feature_list . '{' block '}' ';'

    OVERRIDE  shift, and go to state 45
    VAR       shift, and go to state 46
    '{'       shift, and go to state 47
    '}'       shift, and go to state 48

    $default  reduce using rule 65 (opt_override)

    feature       go to state 49
    opt_override  go to state 50


State 27

   19 var_formal: VAR OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (var_formal)


State 28

   28 expr: IF . '(' expr ')' expr ELSE expr

    '('  shift, and go to state 51


State 29

   32 expr: NEW . TYPEID actuals

    TYPEID  shift, and go to state 52


State 30

   44 expr: NULL .

    $default  reduce using rule 44 (expr)


State 31

   26 expr: SUPER . '.' OBJECTID actuals

    '.'  shift, and go to state 53


State 32

   48 expr: THIS .

    $default  reduce using rule 48 (expr)


State 33

   29 expr: WHILE . '(' expr ')' expr

    '('  shift, and go to state 54


State 34

   46 expr: STR_LIT .

    $default  reduce using rule 46 (expr)


State 35

   45 expr: INT_LIT .

    $default  reduce using rule 45 (expr)


State 36

   47 expr: BOOL_LIT .

    $default  reduce using rule 47 (expr)


State 37

   25 expr: OBJECTID . '=' expr
   49     | OBJECTID .
   50     | OBJECTID . actuals

    '='  shift, and go to state 55
    '('  shift, and go to state 24

    $default  reduce using rule 49 (expr)

    actuals  go to state 56


State 38

   37 expr: '-' . expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 57


State 39

   30 expr: '{' . block '}'

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    VAR       shift, and go to state 58
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    $default  reduce using rule 51 (block)

    expr       go to state 59
    block      go to state 60
    stmt_list  go to state 61


State 40

   42 expr: '(' . expr ')'
   43     | '(' . ')'

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    ')'       shift, and go to state 62
    '!'       shift, and go to state 42

    expr  go to state 63


State 41

   53 actuals: '(' ')' .

    $default  reduce using rule 53 (actuals)


State 42

   41 expr: '!' . expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 64


State 43

   27 expr: expr . '.' OBJECTID actuals
   31     | expr . MATCH '{' simple_cases '}'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . EQEQ expr
   40     | expr . LE expr
   55 expr_list: expr .

    MATCH  shift, and go to state 65
    EQEQ   shift, and go to state 66
    LE     shift, and go to state 67
    '<'    shift, and go to state 68
    '-'    shift, and go to state 69
    '+'    shift, and go to state 70
    '*'    shift, and go to state 71
    '/'    shift, and go to state 72
    '.'    shift, and go to state 73

    $default  reduce using rule 55 (expr_list)


State 44

   54 actuals: '(' expr_list . ')'
   56 expr_list: expr_list . ',' expr

    ')'  shift, and go to state 74
    ','  shift, and go to state 75


State 45

   64 opt_override: OVERRIDE .

    $default  reduce using rule 64 (opt_override)


State 46

   13 feature: VAR . OBJECTID ':' TYPEID '=' expr ';'
   14        | VAR . OBJECTID '=' NATIVE ';'

    OBJECTID  shift, and go to state 76


State 47

   10 feature_list: feature_list '{' . block '}' ';'

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    VAR       shift, and go to state 58
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    $default  reduce using rule 51 (block)

    expr       go to state 59
    block      go to state 77
    stmt_list  go to state 61


State 48

    4 class_decl: CLASS TYPEID var_formals superclass '{' feature_list '}' .

    $default  reduce using rule 4 (class_decl)


State 49

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 50

   11 feature: opt_override . DEF OBJECTID formals ':' TYPEID '=' expr ';'
   12        | opt_override . DEF OBJECTID formals ':' TYPEID '=' NATIVE ';'

    DEF  shift, and go to state 78


State 51

   28 expr: IF '(' . expr ')' expr ELSE expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 79


State 52

   32 expr: NEW TYPEID . actuals

    '('  shift, and go to state 24

    actuals  go to state 80


State 53

   26 expr: SUPER '.' . OBJECTID actuals

    OBJECTID  shift, and go to state 81


State 54

   29 expr: WHILE '(' . expr ')' expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 82


State 55

   25 expr: OBJECTID '=' . expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 83


State 56

   50 expr: OBJECTID actuals .

    $default  reduce using rule 50 (expr)


State 57

   27 expr: expr . '.' OBJECTID actuals
   31     | expr . MATCH '{' simple_cases '}'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | '-' expr .
   38     | expr . '<' expr
   39     | expr . EQEQ expr
   40     | expr . LE expr

    '.'  shift, and go to state 73

    $default  reduce using rule 37 (expr)


State 58

   59 stmt_list: VAR . OBJECTID ':' TYPEID '=' expr ';' stmt_list

    OBJECTID  shift, and go to state 84


State 59

   27 expr: expr . '.' OBJECTID actuals
   31     | expr . MATCH '{' simple_cases '}'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . EQEQ expr
   40     | expr . LE expr
   57 stmt_list: expr .
   58          | expr . ';' stmt_list

    MATCH  shift, and go to state 65
    EQEQ   shift, and go to state 66
    LE     shift, and go to state 67
    '<'    shift, and go to state 68
    '-'    shift, and go to state 69
    '+'    shift, and go to state 70
    '*'    shift, and go to state 71
    '/'    shift, and go to state 72
    '.'    shift, and go to state 73
    ';'    shift, and go to state 85

    $default  reduce using rule 57 (stmt_list)


State 60

   30 expr: '{' block . '}'

    '}'  shift, and go to state 86


State 61

   52 block: stmt_list .

    $default  reduce using rule 52 (block)


State 62

   43 expr: '(' ')' .

    $default  reduce using rule 43 (expr)


State 63

   27 expr: expr . '.' OBJECTID actuals
   31     | expr . MATCH '{' simple_cases '}'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . EQEQ expr
   40     | expr . LE expr
   42     | '(' expr . ')'

    MATCH  shift, and go to state 65
    EQEQ   shift, and go to state 66
    LE     shift, and go to state 67
    '<'    shift, and go to state 68
    '-'    shift, and go to state 69
    '+'    shift, and go to state 70
    '*'    shift, and go to state 71
    '/'    shift, and go to state 72
    '.'    shift, and go to state 73
    ')'    shift, and go to state 87


State 64

   27 expr: expr . '.' OBJECTID actuals
   31     | expr . MATCH '{' simple_cases '}'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . EQEQ expr
   40     | expr . LE expr
   41     | '!' expr .

    '.'  shift, and go to state 73

    $default  reduce using rule 41 (expr)


State 65

   31 expr: expr MATCH . '{' simple_cases '}'

    '{'  shift, and go to state 88


State 66

   39 expr: expr EQEQ . expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 89


State 67

   40 expr: expr LE . expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 90


State 68

   38 expr: expr '<' . expr

    IF        shift, and go to state 28
    NEW       shift, and go to state 29
    NULL      shift, and go to state 30
    SUPER     shift, and go to state 31
    THIS      shift, and go to state 32
    WHILE     shift, and go to state 33
    STR_LIT   shift, and go to state 34
    INT_LIT   shift, and go to state 35
    BOOL_LIT  shift, and go to state 36
    OBJECTID  shift, and go to state 37
    '-'       shift, and go to state 38
    '{'       shift, and go to state 39
    '('       shift, and go to state 40
    '!'       shift, and go to state 42

    expr  go to state 91


State 69

   34 expr: expr '-' . expr
